<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="10"
    android:background="@color/DroPurple"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="3"
        android:background="@drawable/oval_shape"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/medicine_photo"
        android:cropToPadding="false"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/medicine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drug_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/_1x"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/successful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/garlic_oil"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/drug_description"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drug_gram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/soft_gel_650mg"
        android:textColor="@color/cardview_light_background"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/drug_description"
        app:layout_constraintTop_toBottomOf="@+id/successful" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/n1000"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/delete_bag"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/ic_baseline_delete_outline_24" />

    <TextView
        android:id="@+id/minus_product"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/oval_shape"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/proxima_nova_regular"
        android:gravity="center"
        android:text="@string/minus"
        android:textSize="36sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/number_of_products"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/number_of_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/add_product"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/add_product"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/oval_shape"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/proxima_nova_regular"
        android:gravity="center"
        android:text="@string/plus"
        android:textSize="36sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

</androidx.constraintlayout.widget.ConstraintLayout>