<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@android:color/white"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/allItems"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/items"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/white"
                    android:src="@drawable/ic_left_24px"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.Toolbar>

        <ImageButton
            android:id="@+id/sort_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/oval_shape"
            android:src="@drawable/ic_up_down_arrow_24px"
            app:layout_constraintEnd_toStartOf="@+id/filter_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/oval_shape"
            android:src="@drawable/ic_search_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/filter_button"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ImageButton
            android:id="@+id/filter_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/oval_shape"
            android:src="@drawable/ic_filter_24px"
            app:layout_constraintEnd_toStartOf="@+id/search_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sort_button"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_corner_stroke_search"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sort_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_products"
            android:layout_width="0dp"
            android:layout_height="599dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            tools:itemCount="2"
            tools:listitem="@layout/product" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:id="@+id/products_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_bottom_sheet">

            <View
                android:id="@+id/view"
                android:layout_width="30dp"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bottom_sheet_number"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/oval_shape"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center"
                android:text="@string/_4"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_bag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_shopping_bag_24px" />

                <TextView
                    android:id="@+id/bag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/bag"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_corner_shape"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/tap_on_an_item_for_add_remove_and_delete_option"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_number" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/drug_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instruction"
                tools:itemCount="6"
                tools:listitem="@layout/bag_product" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/total"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drug_list" />

            <ImageView
                android:id="@+id/naira3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_naira_24px"
                app:layout_constraintEnd_toStartOf="@+id/product_price"
                app:layout_constraintTop_toBottomOf="@+id/drug_list" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/n1000"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drug_list" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_corner_shape"
                android:backgroundTint="@color/cardview_light_background"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/checkout"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drug_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>